...
        android:orientation="vertical">

        <include layout="@layout/toolbar_title"
            android:id="@+id/toolbar"/>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </FrameLayout>
        
        
...
